1999-05-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* rglclock.1: Remove keyword substitutions for Package and
	Version.

	* configure.in: Remove PRCS keyword substitutions.

	* TODO: Modified.

1999-05-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

	* main.cc (main): Add p as a callback of c.
	(main): Remove save before exit.

	* profile.h (options_callback): Add glclock::options_callback to
	virtual base class.

	* profile.cc (options_changed): New function.

	* glclock.cc (remove_callback, add_callback): New functions.
	(set_update_rate): Call all callbacks.

	* glclock.h (class glclock): Add struct options_callback.
	(class glclock): Add member callbacks.

	* Makefile.am (libclock_a_SOURCES): Move glclock.cc and about.cc
	from rglclock_SOURCES.

	* glclock.cc (glclock): Remove creation of a item factory.
	(handle_button_event): Remove the case for button-3.
	(menu_quit, menu_about, edit_options): Removed.

	* glclock.h (class glclock): Remove members for the popup menu.

	* main.cc (edit_options, describe): New function.
	(create_widget): Modify the menu.

	* TODO: Modified.

	* NEWS: Modified.

	* main.cc (main): Save and restore options.

	* configure.in: Add checks for <gnome-xml/parser.h> and -lxml,
	-lz.

	* Makefile.am (rglclock_SOURCES): Add profile.cc.
	(noinst_HEADERS): Add profile.h.

	* profile.h: New file.

	* profile.cc: New file.

	* main.cc (create_widget): New function.
	(main): Use create_widget.
	(main): Make the glclock object block-local.

1999-05-03  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc (main): Store glc as callback data for menu items.
	(handle_delete_event): Removed.
	(main): Make toplevel function-local.

	* autowidget.h (class auto_widget): Removed.  Also remove all uses
	by replacing with GtkObject_ptr.

	* main.cc (main): Use GtkObject_ptr.

	* autowidget.h (template class GtkObject_ptr): New class template.

	* main.cc (main): Make a vbox and a menu bar.

	* gtkrc: Removed.
