@@ -1,3 +1,7 @@
+1999-05-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* ja.po: Modified.
+
 1999-05-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* ja.po: Add new string.
